# spbgti

./: 1.c  CMakeLists.txt  main.c
labwork2/: main.c
labwork3/: array.c  array.h  io.c  io.h  main.c  main.h  matrix.c  matrix.h  menu.c  menu.h  random.c  random.h  tasks.c  tasks.h  utils.c  utils.h
